{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 34,
  "lineage": "ec066ffd-8535-b451-ae63-822b2475f281",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ebilling-ubuntu-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:940949265081:instance/i-0180088f9436c9d27",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ebilling-ec2-instance-profile-unt1fbl3",
            "id": "i-0180088f9436c9d27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ebilling-ec2-key-pair-unt1fbl3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b63d99ac36b968ff",
            "private_dns": "ip-10-10-10-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.103",
            "public_dns": "ec2-3-88-137-0.compute-1.amazonaws.com",
            "public_ip": "3.88.137.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0c8025123a7b57eb4",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014c20a9c9c59936f",
            "tags": {
              "Name": "ebilling-ubuntu-ec2-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ubuntu-ec2",
              "yor_trace": "b240e180-7f5d-44cc-ae81-257092b9d304"
            },
            "tags_all": {
              "Name": "ebilling-ubuntu-ec2-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ubuntu-ec2",
              "yor_trace": "b240e180-7f5d-44cc-ae81-257092b9d304"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ad3e63ae735c5a3",
              "sg-090dd03b5e1afe600"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ebilling-ec2-instance-profile",
            "aws_iam_role.ebilling-ec2-role",
            "aws_key_pair.ebilling-ec2-key-pair",
            "aws_security_group.ebilling-ec2-http-security-group",
            "aws_security_group.ebilling-ec2-ssh-security-group",
            "aws_subnet.ebilling-public-subnet-1",
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ebilling-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:internet-gateway/igw-04f2691ee6ef0b47d",
            "id": "igw-04f2691ee6ef0b47d",
            "owner_id": "940949265081",
            "tags": {
              "Name": "ebilling unt1fbl3 Internet Gateway",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-internet-gateway",
              "yor_trace": "599a96a6-86c6-4ab8-8a71-5274605a0e76"
            },
            "tags_all": {
              "Name": "ebilling unt1fbl3 Internet Gateway",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-internet-gateway",
              "yor_trace": "599a96a6-86c6-4ab8-8a71-5274605a0e76"
            },
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "dependencies": [
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ebilling-public-subnet-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:route-table/rtb-025193d83d814eb4b",
            "id": "rtb-025193d83d814eb4b",
            "owner_id": "940949265081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f2691ee6ef0b47d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ebilling unt1fbl3 Route Table for Public Subnet",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-route-table",
              "yor_trace": "606ae2a0-4e01-4258-8f46-a1aff5f572ee"
            },
            "tags_all": {
              "Name": "ebilling unt1fbl3 Route Table for Public Subnet",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-route-table",
              "yor_trace": "606ae2a0-4e01-4258-8f46-a1aff5f572ee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ebilling-internet-gateway",
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ebilling-public-subnet-1-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e42f7c5791e35a",
            "route_table_id": "rtb-025193d83d814eb4b",
            "subnet_id": "subnet-014c20a9c9c59936f"
          },
          "dependencies": [
            "aws_internet_gateway.ebilling-internet-gateway",
            "aws_route_table.ebilling-public-subnet-route-table",
            "aws_subnet.ebilling-public-subnet-1",
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ebilling-public-subnet-2-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9700235f1fe1528",
            "route_table_id": "rtb-025193d83d814eb4b",
            "subnet_id": "subnet-041449224130dff4d"
          },
          "dependencies": [
            "aws_internet_gateway.ebilling-internet-gateway",
            "aws_route_table.ebilling-public-subnet-route-table",
            "aws_subnet.ebilling-public-subnet-2",
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ebilling-ec2-http-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:security-group/sg-090dd03b5e1afe600",
            "description": "ebilling unt1fbl3 Security Group for EC2 Instance over HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090dd03b5e1afe600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ad3e63ae735c5a3"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ebilling-ec2-http-unt1fbl3",
            "name_prefix": "",
            "owner_id": "940949265081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ebilling-ec2-http-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ec2-http-security-group",
              "yor_trace": "d966aba7-5783-4877-823b-a777fc67d50c"
            },
            "tags_all": {
              "Name": "ebilling-ec2-http-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ec2-http-security-group",
              "yor_trace": "d966aba7-5783-4877-823b-a777fc67d50c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ebilling-ec2-ssh-security-group",
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ebilling-ec2-ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:security-group/sg-03ad3e63ae735c5a3",
            "description": "ebilling unt1fbl3 Security Group for EC2 Instance over SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ad3e63ae735c5a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ebilling-ec2-ssh-unt1fbl3",
            "name_prefix": "",
            "owner_id": "940949265081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ebilling-ec2-ssh-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ec2-ssh-security-group",
              "yor_trace": "1302acd8-579c-463e-a6c9-5878dfdd2bf9"
            },
            "tags_all": {
              "Name": "ebilling-ec2-ssh-unt1fbl3",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-ec2-ssh-security-group",
              "yor_trace": "1302acd8-579c-463e-a6c9-5878dfdd2bf9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebilling-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:subnet/subnet-014c20a9c9c59936f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014c20a9c9c59936f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940949265081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ebilling unt1fbl3 Public Subnet #1",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-1",
              "yor_trace": "599b02e3-7069-4ec3-ae1a-bf240ad409d0"
            },
            "tags_all": {
              "Name": "ebilling unt1fbl3 Public Subnet #1",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-1",
              "yor_trace": "599b02e3-7069-4ec3-ae1a-bf240ad409d0"
            },
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "dependencies": [
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebilling-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:subnet/subnet-041449224130dff4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041449224130dff4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940949265081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ebilling unt1fbl3 Public Subnet #2",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-2",
              "yor_trace": "8ac082be-4e07-4855-90d1-e1e038ff7b53"
            },
            "tags_all": {
              "Name": "ebilling unt1fbl3 Public Subnet #2",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-public-subnet-2",
              "yor_trace": "8ac082be-4e07-4855-90d1-e1e038ff7b53"
            },
            "vpc_id": "vpc-0d8a6ea864c50de01"
          },
          "dependencies": [
            "aws_vpc.ebilling-vpc",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ebilling-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940949265081:vpc/vpc-0d8a6ea864c50de01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0aad848422a769782",
            "default_route_table_id": "rtb-084aba949523c52ac",
            "default_security_group_id": "sg-04e3a89c15a5b5781",
            "dhcp_options_id": "dopt-0c726ad9b33dafa8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8a6ea864c50de01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084aba949523c52ac",
            "owner_id": "940949265081",
            "tags": {
              "Name": "ebilling unt1fbl3 VPC",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-vpc",
              "yor_trace": "75c11fd2-cdf3-42ac-a385-5aea38796b70"
            },
            "tags_all": {
              "Name": "ebilling unt1fbl3 VPC",
              "Scenario": "ebilling-scenario",
              "Stack": "ebilling",
              "yor_name": "ebilling-vpc",
              "yor_trace": "75c11fd2-cdf3-42ac-a385-5aea38796b70"
            }
          },
          "dependencies": [
            "random_string.bucket_suffix"
          ]
        }
      ]
    }
  ]
}